; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_luaB_loadstring.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_luaB_loadstring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @luaB_loadstring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @luaB_loadstring(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i8* @luaL_checklstring(i32* %6, i32 1, i64* %3)
  store i8* %7, i8** %4, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i8* @luaL_optstring(i32* %8, i32 2, i8* %9)
  store i8* %10, i8** %5, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load i64, i64* %3, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @luaL_loadbuffer(i32* %12, i8* %13, i64 %14, i8* %15)
  %17 = call i32 @load_aux(i32* %11, i32 %16)
  ret i32 %17
}

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i8* @luaL_optstring(i32*, i32, i8*) #1

declare dso_local i32 @load_aux(i32*, i32) #1

declare dso_local i32 @luaL_loadbuffer(i32*, i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
